<resources>
    <string name="app_name">Modbus Master</string>
    <string name="get_readings">Get readings</string>
    <string name="open_profile_page">Open profile page</string>
    <string name="profiles">Profiles</string>
    <string name="name">Name</string>
    <string name="ip_address">IP address</string>
    <string name="port">Port</string>
    <string name="name_hint">The name of this profile</string>
    <string name="ip_hint">192.168.0.1</string>
    <string name="port_hint">502</string>
    <string name="new_profile">New profile</string>
    <string name="save_profile">Save profile</string>
    <string name="delete_profile">Delete profile</string>
    <string name="coils">Coils</string>
    <string name="discrete_inputs">Discrete input</string>
    <string name="input_registers">Input registers</string>
    <string name="holding_registers">Holding registers</string>
    <string name="modbus_address">Modbus address</string>
    <string name="value">Value</string>
    <string name="description">Description</string>
    <string name="reload_readings">Reload readings</string>
    <string name="save_decriptions">Save descriptions</string>
    <string name="change_value_of_coil">Change value of coil</string>
    <string name="create_profile">Create new profile</string>
    <string name="choose_communication_type">Choose communication type</string>
    <string name="ethernet">TCP/IP</string>
    <string name="serial">RTU</string>
    <string name="serial_port_hint">1</string>
    <string name="choose_profile">Choose a profile from the dropdown list or create a new profile</string>
</resources>