<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profiles" />

    <Spinner
        android:id="@+id/profileSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/saveProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveProfile"
        android:text="@string/save_profile" />

    <Button
        android:id="@+id/deleteProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deleteProfile"
        android:text="@string/delete_profile" />

    <TableLayout
        android:id="@+id/profileTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/editTextProfileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/name_hint"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ipAddressTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ip_address" />

            <EditText
                android:id="@+id/editTextIpAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/ip_hint"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/portTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/port" />

            <EditText
                android:id="@+id/editTextPortNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/port_hint"
                android:inputType="number" />
        </TableRow>

    </TableLayout>

</LinearLayout>